# ango-auth

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  pr-check.yml
ango_auth/: __main__.py
ango_auth/app/core/: config.py  exceptions.py  hash.py
ango_auth/app/core/crypto/: auth.py
ango_auth/app/models/: auth.py  user.py
ango_auth/app/routers/: auth.py
ango_auth/app/services/: auth.py  web.py
