[tool.poetry]
name = "ango-auth"
version = "0.1.0"
description = "Ango Auth microservice"
authors = ["Bharath Vignesh J K"]
readme = "README.md"
packages = [{include = "ango_auth"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"
poetry = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']


[tool.isort]
py_version = 310
profile = "black"
line_length = 120
skip_gitignore = true
multi_line_output = 3
remove_redundant_aliases = true
include_trailing_comma = true